--- a/src/index.css
+++ b/src/index.css
@@ -13,19 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
+  padding-left: 2%;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -33,6 +26,9 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+p{
+  color: #000000;
 }
 
 button {
@@ -47,22 +43,27 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #000000;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button:active {
+  background-color: #535eb9;
 }
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
   button {
-    background-color: #f9f9f9;
+    background-color: #454d96;
+    color: rgb(255, 255, 255);
   }
+}
+.inputs{
+  margin-bottom: 5px;
+  height: 25px;
+  border-radius: 10px;
+  border-style: dashed;
+}
+#form{
+  display: grid;
 }
